--- a/app/pug/page/login.pug
+++ b/app/pug/page/login.pug
@@ -1,5 +1,38 @@
 ion-view.page-login(
     view-title='Login'
+    hide-nav-bar='true'
 )
-    ion-content
-        button.button.button-block.button-dark.icon-left.ion-social-github(ng-click='ctrl.socialLogin("github")') Login with Github
+    ion-content(
+        scroll='false'
+        padding='false'    
+    )
+        .text
+            b Madness Enjin
+            button.button.button-block.button-dark.icon-left.ion-social-github(ng-click='ctrl.socialLogin("github")') Login with Github
+        .main
+        .grid
+            .grid-inner
+                .hori
+                    .line
+                    .line
+                    .line
+                    .line
+                    .line
+                    .line
+                    .line
+                    .line
+                    .line
+                    .line
+                    .line
+                .vert
+                    .line
+                    .line
+                    .line
+                    .line
+                    .line
+                    .line
+                    .line
+                    .line
+                    .line
+                    .line
+                    .line
