--- a/app/scss/layout/body.scss
+++ b/app/scss/layout/body.scss
@@ -6,6 +6,10 @@ body {
     width: 100%;
 }
 
+.pane {
+    background: rgba(46, 46, 46, 1.00);
+}
+
 .loading {
     border-radius: 100% !important;
     padding: 15px !important;
