--- a/app/scss/page/login.scss
+++ b/app/scss/page/login.scss
@@ -1,19 +1,185 @@
 // IMPORTS
 @import "../variables";
 
+$speed: 5s;
+$increase-vert: $speed/10;
+$scanlines: 1px;
+
+$theme-primary-dark: darken($theme-primary, 25%);
+$theme-primary-medium: lighten($theme-primary, 10%);
+$theme-primary-light: lighten($theme-primary, 40%);
+
+$gradient-dark: rgba(red($theme-primary-dark), green($theme-primary-dark), blue($theme-primary-dark), 1);
+$gradient-medium: rgba(red($theme-primary-medium), green($theme-primary-medium), blue($theme-primary-medium), 1);
+$gradient-light: rgba(red($theme-primary-light), green($theme-primary-light), blue($theme-primary-light), 1);
+
+@keyframes blur-n-hue {
+    0% {filter: blur(10px) hue-rotate(-15deg);}
+    50% {filter: blur(20px) hue-rotate(0deg);}
+    100% {filter: blur(10px) hue-rotate(-15deg);}
+}
+@keyframes move {
+    from {top: 0%; opacity: 0.8;}
+    to {top: 100%; opacity: 1;}
+}
+@keyframes angle {
+    0% {transform: rotateX(58deg);}
+    50% {transform: rotateX(60deg);}
+    100% {transform: rotateX(58deg);}
+}
+@keyframes bg {
+    0% {background-color: rgba(46, 46, 46, 0);}
+    49% {background-color: rgba(46, 46, 46, 0);}
+    50.5% {background-color: rgba(155, 155, 206, .4);}
+    51% {background-color: rgba(46, 46, 46, 0);}
+    51.5% {background-color: rgba(155, 155, 206, .3);}
+    57% {background-color: rgba(46, 46, 46, 0);}
+    100% {background-color: rgba(46, 46, 46, 0);}
+}
+
 // PAGE STYLES
 .page-login {
-    svg {
-        width: 100%;
-        height: 100%;
-        g {
-            mix-blend-mode: lighten;
-        }
-        polygon {
-            stroke: none;
-            fill: white;
+    .pane {
+        animation: bg 10s infinite ease-out;
+        height: 100vh;
+        overflow: hidden;
+        position: relative;
+        margin: 0;
+        &:before {
+            content: "";
+            position: absolute;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            background-color: rgba(30,30,30,0.2); //fallback
+            background: -webkit-repeating-linear-gradient(top, transparent 0px, transparent $scanlines, rgba(30,30,30,0.15) $scanlines, rgba(30,30,30,0.15) $scanlines*2);
+            -webkit-background-size: 100% $scanlines*2;
+            background: -moz-repeating-linear-gradient(top, transparent 0px, transparent $scanlines, rgba(30,30,30,0.15) $scanlines, rgba(30,30,30,0.15) $scanlines*2);
+            -moz-background-size: 100% $scanlines*2;
+            display: block;
+            z-index: 10;
         }
     }
+    .text {
+        min-width: 300px;
+        color: white;
+        font: small-caps lighter 14px/150% "Helvetica Neue", Helvetica, sans-serif;
+        letter-spacing: .2rem;
+        position: absolute;
+        top: 20%;
+        left: 50%;
+        transform: translateX(-50%);
+        text-align: left;
+        line-height: 1.2em;
+        filter: colour-shift(10);
+        z-index: 20;
+        b {
+            font-size: 2.5em;
+            &:after {
+                content: "beta";
+                font-weight: 100;
+                font-size: 12px;
+                position: absolute;
+                top: -20px;
+                right: 0;
+            }
+        }
+    }
+
+    .main {
+        animation: blur-n-hue $speed infinite ease-in-out;
+        content: "";
+        display: block;
+        background: rgba(red($theme-primary), green($theme-primary), blue($theme-primary), 1);
+        background: linear-gradient(180deg,
+            $gradient-dark 0%,
+            $gradient-medium 6%,
+            $gradient-light 8%,
+            $gradient-medium,
+            $theme-primary 100%
+        );
+        width: 150vw;
+        height: 80%;
+        left: -25%;
+        bottom: -10%;
+        position: absolute;
+    }
+
+    .grid {
+        perspective: 300px;
+        width: 100%;
+        height: 100%;
+        position: relative;
+        .grid-inner {
+            position: absolute;
+            top:0;
+            left:0;
+            right:0;
+            bottom:0;
+            width:100%;
+            height:100%;
+            transform: rotateX(60deg);
+            //animation: angle 5s infinite ease-in-out;
+        }
+    }
+    .line {
+        display: block;
+        position: absolute;
+        width: 0px;
+        top: 0;
+        left: 0;
+        right: 0;
+        bottom: 0;
+        border: 1px solid white;
+        box-sizing: border-box;
+        height: 100%;
+        background: white;
+        box-shadow: 0px 0px 6px 2px rgba(255,225,225,0.8);
+    }
+    .hori, .vert {
+        position: absolute;
+        top: 0;
+        left: -10vw;
+        right: 0;
+        bottom: 0;
+        width: 130vw;
+        height: 100vh;
+    }
+    .hori {
+        .line {
+            &:nth-child(1) {left: -40%;}
+            &:nth-child(2) {left: -20%;}
+            &:nth-child(3) {left: 0%;}
+            &:nth-child(4) {left: 20%;}
+            &:nth-child(5) {left: 40%;}
+            &:nth-child(6) {left: 60%;}
+            &:nth-child(7) {left: 80%;}
+            &:nth-child(8) {left: 100%;}
+            &:nth-child(9) {left: 120%;}
+            &:nth-child(10) {left: 140%;}
+        }
+    }
+
+    .vert {
+        .line {
+            animation: move $speed infinite linear;
+            width: 200%;
+            left: -50%;
+            height: 0px;
+            &:nth-child(1) {animation: none; opacity: 0.7;}
+            &:nth-child(2) {animation-delay: $increase-vert;}
+            &:nth-child(3) {animation-delay: $increase-vert*2;}
+            &:nth-child(4) {animation-delay: $increase-vert*3;}
+            &:nth-child(5) {animation-delay: $increase-vert*4;}
+            &:nth-child(6) {animation-delay: $increase-vert*5;}
+            &:nth-child(7) {animation-delay: $increase-vert*6;}
+            &:nth-child(8) {animation-delay: $increase-vert*7;}
+            &:nth-child(9) {animation-delay: $increase-vert*8;}
+            &:nth-child(10) {animation-delay: $increase-vert*9;}
+        }
+    }
+
     @media (max-width: $screen-xl) {
 
     }
