--- a/app/pug/page/appsNew.pug
+++ b/app/pug/page/appsNew.pug
@@ -1,3 +1,5 @@
-ion-view.page-appsNew(view-title='appsNew')
-    ion-content
-        
+ion-view.page-appsNew(view-title='New App')
+    ion-content(padding='true')
+        .card
+            ion-list
+                ion-item
