--- a/app/pug/page/home.pug
+++ b/app/pug/page/home.pug
@@ -1,5 +1,5 @@
 ion-view.page-home(view-title='Home')
-    ion-content
+    ion-content(padding='true')
         .card
             ion-list
                 ion-item.item-avatar(ng-repeat='org in ctrl.organizations') 
