Add sexy enjin-input element

--- a/app/pug/page/home.pug
+++ b/app/pug/page/home.pug
@@ -11,5 +11,5 @@ ion-view.page-home(view-title='Home')
         position='br'
         resting-icon='ion-plus-round'
         active-icon='ion-plus-round'
-        ui-sref="appsNew"
+        ui-sref="newProject"
     )
