--- a/app/scss/directive/enjinInput.scss
+++ b/app/scss/directive/enjinInput.scss
@@ -3,6 +3,8 @@
 
 // COMPONENT STYLES
 enjin-input {
+    display: block;
+    margin-bottom: 15px;
     .item-input {
         border: none;
         border-bottom: 3px solid #666666;
