--- a/app/scss/page/home.scss
+++ b/app/scss/page/home.scss
@@ -3,6 +3,17 @@
 
 // PAGE STYLES
 .page-home {
+    .col-xs {
+        padding: 15px;
+    }
+    .card {
+        width: 200px;
+        display: block;
+        margin: 0 auto;
+        .item {
+            text-transform: capitalize;
+        }
+    }
     @media (max-width: $screen-xl) {
 
     }
