--- a/app/pug/app.pug
+++ b/app/pug/app.pug
@@ -24,4 +24,6 @@ html(lang="en")
             script(src="js/enjin.js")
     body(ng-app=name)
         ion-nav-bar.bar-positive.has-tabs-top
+            ion-nav-buttons(side="right")
+                a.button.button-icon.icon.ion-power(ng-click='$root.logout()')
         ion-nav-view
