Change verbiage on project form

--- a/app/pug/page/projectForm.pug
+++ b/app/pug/page/projectForm.pug
@@ -1,4 +1,4 @@
-ion-view.page-projectForm(view-title='New Project')
+ion-view.page-projectForm(view-title='Create Project')
     ion-content
         form(
             submit-on='submitForm'
