--- a/app/pug/page/home.pug
+++ b/app/pug/page/home.pug
@@ -1,4 +1,4 @@
-ion-view.page-home(view-title='Projects' cache-view='false')
+ion-view.page-home(view-title='Projects' cache-view='false' hide-back-button='true')
     ion-content(padding='true')
         fallback(
             ng-if='!ctrl.projects.length'
