--- a/app/pug/page/settings.pug
+++ b/app/pug/page/settings.pug
@@ -1,4 +1,4 @@
-ion-view.page-settings(view-title='settings')
+ion-view.page-settings(view-title='Settings')
     ion-content
         .card
             ion-list
