Add logout button to settings page

--- a/app/pug/page/settings.pug
+++ b/app/pug/page/settings.pug
@@ -12,3 +12,5 @@ ion-view.page-settings(view-title='Settings')
                     h2 Secret Token
                     p DO NOT SHARE THIS (Click to Copy)
                     i.icon.ion-android-clipboard
+        .padding
+            a.button.button-block.button-positive.icon-left.ion-power(ng-click='$root.logout()') Logout
