Fix link to testing server

--- a/app/pug/page/home.pug
+++ b/app/pug/page/home.pug
@@ -13,7 +13,7 @@ ion-view.page-home(view-title='Projects' cache-view='false' hide-back-button='tr
                     ion-item {{project.name}}
                     .button-bar
                         a.button.button-clear.button-dark.icon-left.ion-social-github(ng-href='https://github.com/{{project.github}}' target='_blank') Repo
-                        a.button.button-clear.button-dark.icon-right.ion-earth(ng-href='http://{{project.name}}.madnessenjin.net' target='_blank') Test
+                        a.button.button-clear.button-dark.icon-right.ion-earth(ng-href='http://{{project.subdomain}}.madnessenjin.net' target='_blank') Test
     mfb-menu(
         position='br'
         resting-icon='ion-plus-round'
