Fix subdomain form

--- a/app/pug/page/projectForm.pug
+++ b/app/pug/page/projectForm.pug
@@ -25,9 +25,8 @@ ion-view.page-projectForm(view-title='Create Project')
             enjin-input(
                 model='ctrl.project.subdomain'
                 placeholder='{{ctrl.cleanSubdomain(ctrl.project.name)}}'
-                name='name'
+                name='subdomain'
                 required='true'
-                auto-focus='true'
             )
             enjin-input(
                 model='ctrl.project.description'
