Fix subdomain form

--- a/app/pug/page/projectForm.pug
+++ b/app/pug/page/projectForm.pug
@@ -24,7 +24,7 @@ ion-view.page-projectForm(view-title='Create Project')
             )
             enjin-input(
                 model='ctrl.project.subdomain'
-                placeholder='{{ctrl.cleanSubdomain(ctrl.project.name)}}'
+                placeholder='{{ctrl.cleanSubdomain(ctrl.project.name)}}.madnessenjin.net'
                 name='subdomain'
                 required='true'
             )
