--- a/app/scss/layout/body.scss
+++ b/app/scss/layout/body.scss
@@ -1,9 +1,11 @@
+
 @import '../variables';
 @import '../mixin/clearfix';
 
 body {
     @include clearfix();
     width: 100%;
+    color: #FFFFFF;
 }
 
 .pane {
