--- a/app/scss/page/createPlugin.scss
+++ b/app/scss/page/createPlugin.scss
@@ -3,6 +3,9 @@
 
 // PAGE STYLES
 .page-createPlugin {
+    .ace_editor {
+        height: calc(100vh - 50px);
+    }
     @media (max-width: $screen-xl) {
 
     }
