--- a/app/scss/state/menuPlugins.scss
+++ b/app/scss/state/menuPlugins.scss
@@ -7,6 +7,12 @@
         display: block;
         max-width: 600px;
         margin: 15px auto;
+        .item-input-wrapper {
+            background: transparent;
+        }
+        .ion-search {
+            font-size: 25px;
+        }
     }
     @media (max-width: $screen-xl) {
 
