Add repo link to plugins and fix back button functionality

--- a/app/pug/page/createPlugin.pug
+++ b/app/pug/page/createPlugin.pug
@@ -1,11 +1,11 @@
 ion-view.page-createPlugin(view-title='Create Plugin' cache-view='false')
     ion-nav-title {{ctrl.title}}
     ion-nav-buttons(side='left')
-        a.button.button-icon.icon.ion-arrow-left-c(ng-click='ctrl.back()')
+        a.button.button-icon.icon.ion-arrow-left-c(ng-click='$root.back()')
     ion-content(scroll='false')
         div(
             ace-editor='ctrl.aceOptions' 
-            ng-model='ctrl.plugin.json'
+            ng-model='ctrl.plugin.jsonString'
             data-tap-disabled='true'
         )
     mfb-menu(
