--- a/app/pug/page/settings.pug
+++ b/app/pug/page/settings.pug
@@ -1,4 +1,7 @@
 ion-view.page-settings(view-title='Settings')
+    ion-nav-bar.bar-positive.has-tabs-top
+        ion-nav-buttons(side="left")
+            a.button.button-icon.icon.ion-arrow-left-c(ng-click='$root.back()')
     ion-content
         .card
             ion-list
