--- a/app/scss/state/menuPlugins.scss
+++ b/app/scss/state/menuPlugins.scss
@@ -27,6 +27,10 @@
                 color: $theme-primary;
             }
         }
+
+        .ion-ios-book {
+            right: 50px;
+        }
     }
     @media (max-width: $screen-xl) {
 
